<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recycler_view"
    android:padding="8dp"
    tools:ignore="ContentDescription">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/DarkCyan"
        android:scaleType="centerCrop"
        android:padding="8dp"
        android:layout_alignParentBottom="true" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivFavorite"
        android:src="@drawable/favourites"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="8dp" />
    <TextView
        android:id="@+id/tvVideoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/tvChannelName2"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:padding="4dp"
        android:textColor="@color/mat_bg_color"
        android:text="@string/tvVideoName"/>
    <TextView
        android:id="@+id/tvChannelName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:padding="4dp"
        android:textColor="@color/mat_bg_color"
        android:text="@string/tvChannelName"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/tvTotalTIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvChannelName2"
        android:layout_alignBottom="@+id/tvChannelName2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:textSize="18sp"
        android:text="@string/tvTotalTIme"
        android:textColor="@color/mat_bg_color"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>
