<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black_75_percent"
        android:padding="4dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#FF626EEE"
            android:gravity="top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvKidTube"
                android:text="@string/tvKidTube"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:padding="4dp"
                android:elevation="4dp"
                tools:ignore="UnusedAttribute" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="4dp"
            android:id="@+id/viewPager">
        </android.support.v4.view.ViewPager>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_ash"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:id="@+id/recycler_view"
            >

        </android.support.v7.widget.RecyclerView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:background="@color/light_ash"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/home_btn"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHomeBtn"
                    android:textColor="@color/black_75_percent"
                    android:text="@string/tvHomeBtn"
                    android:layout_gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="4dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/search"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSearch"
                    android:textColor="@color/black_75_percent"
                    android:text="@string/tvSearch"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="4dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/favourites"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFvrts"
                    android:textColor="@color/black_75_percent"
                    android:text="@string/tvFvrts"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>